--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django>=1.7,<1.8
-MySQL-python==1.2.5
-ipaddr==2.1.11
+Django>=1.8,<1.9
 django-auth-ldap
-django-suit
+django-suit==0.2.15
+djangorestframework==3.2.4
+ipaddress==1.0.14
+mysqlclient==1.3.6
