--- a/mdb/templates/pxelinux.cfg
+++ b/mdb/templates/pxelinux.cfg
@@ -1,4 +1,7 @@
-kernel {{kernel}}
-append ramdisk_size=14984 locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=no netcfg/wireless_wep= netcfg_choose_interface=eth0 netcfg/get_hostname= preseed/url={{preseed_config_url}} vga=normal snop={{host.pxe_key}} initrd={{initrd}} -- quiet 
+default ninja
 prompt 0
 timeout 0
+
+label ninja
+  kernel {{kernel}}
+  append ramdisk_size=14984 locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=no netcfg/wireless_wep= netcfg_choose_interface=eth0 netcfg/get_hostname= preseed/url={{preseed_config_url}} vga=normal snop={{host.pxe_key}} initrd={{initrd}} -- quiet
