--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django>=1.8,<1.9
-django-auth-ldap
-django-extensions==1.5.7
-djangorestframework==3.2.4
-django-suit==0.2.15
-ipaddress==1.0.14
-mysqlclient==1.3.6
+django-auth-ldap==1.2.7
+django-extensions==1.6.1
+djangorestframework==3.3.3
+django-suit==0.2.18
+ipaddress==1.0.16
+mysqlclient==1.3.7
