PXE: Allowing config without preseed url

--- a/mdb/templates/pxelinux.cfg
+++ b/mdb/templates/pxelinux.cfg
@@ -4,4 +4,8 @@ timeout 0
 
 label ninja
   kernel {{kernel}}
+{% if preseed_config_url %}
   append ramdisk_size=14984 locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=no netcfg/wireless_wep= netcfg_choose_interface=eth0 netcfg/get_hostname= preseed/url={{preseed_config_url}} vga=normal snop={{host.pxe_key}} initrd={{initrd}} -- quiet
+{% else %}
+  append locale=en_US console-setup/ask_detect=false keyboard-configuration/layoutcode=no netcfg/wireless_wep= vga=normal initrd={{initrd}} -- quiet
+{% endif %}
