--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Django>=1.8,<1.9
-django-auth-ldap==1.2.7
-django-extensions==1.6.1
-djangorestframework==3.3.3
-django-suit==0.2.18
+django-auth-ldap==1.2.8
+django-extensions==1.6.7
+djangorestframework==3.4.0
+django-suit==0.2.19
+gunicorn==19.6.0
 ipaddress==1.0.16
 mysqlclient==1.3.7
